tests/snapshots/parser__parser@27_missing_equals.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/27_missing_equals.lang
---
Err:
  UnexpectedToken:
    expected: ;
    found: Numeric
    pos:
      line: 2
      column: 16
